src/test/ui/proc-macro/attributes-on-modules.stderr
error[E0658]: custom attributes cannot be applied to modules
  --> $DIR/attributes-on-modules.rs:6:1
   |
LL | #[identity_attr]
   | ^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/54727
   = help: add `#![feature(proc_macro_hygiene)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
